// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusModelEditor.protobuf;

message Pus011CommandParameter {
extensions 6 to 106;

  optional ccsds_mal.protobuf.STRING parameterName = 1;
  optional ccsds_mal.protobuf.STRING parameterValue = 2;
  optional ccsds_mal.protobuf.STRING parameterDescription = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateMode = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTime = 5;
}
