// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditorMessages.protobuf;

message Pus011SubSchedule {
extensions 14 to 114;

  optional ccsds_mal.protobuf.UINTEGER serviceApid = 1;
  optional ccsds_mal.protobuf.UINTEGER ssId = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.STRING ssIdLabel = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSubScheduleId = 5;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSubscheduleId = 6;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 7;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStatus = 8;
  optional ccsds_mal.protobuf.STRING executionTimeFirstTc = 9;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeExecTimeFirstTc = 10;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeExecTimeFirstTc = 11;
  optional ccsds_mal.protobuf.STRING serviceApidName = 12;
  optional ccsds_mal.protobuf.ULONG uniqueId = 13;
}
