// Produced by Acceleo Protobuf Generator 2.2.1-R12S2_alpha


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


import "ccsds_mal/types.proto";

package pusModelEditor.protobuf;

message Pus011Apid {
extensions 11 to 111;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeApid = 2;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeApid = 3;
  optional ccsds_mal.protobuf.UINTEGER status = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 5;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeStatus = 6;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
  optional ccsds_mal.protobuf.STRING apidName = 9;
  optional ccsds_mal.protobuf.ULONG uniqueId = 10;
}
